Show spinner while loading subreddit info

--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent">
 
             <LinearLayout
+                    android:id="@+id/subreddit_info_parent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
