--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -30,12 +30,11 @@
                     android:id="@+id/subreddit_info_parent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:divider="@drawable/spacer_16dp_h"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin">
 
                 <LinearLayout
                         android:layout_width="match_parent"
@@ -54,15 +53,23 @@
                             android:id="@+id/nsfw_icon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="16dp"
                             android:layout_marginStart="16dp"
-                            android:layout_gravity="center"
                             android:background="@drawable/nsfw_tag_bg"
                             android:text="@string/nsfw"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                             android:textColor="@color/nsfw_tag_color" />
 
                 </LinearLayout>
+
+                <Button
+                        android:id="@+id/subscribe_unsubscribe"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_gravity="start"
+                        android:maxWidth="280dp"
+                        tools:text="unsubscribe" />
 
                 <android.support.v4.widget.Space
                         android:layout_width="match_parent"
@@ -71,7 +78,9 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/created" />
+                        android:text="@string/created"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/secondary_text" />
 
                 <TextView
                         android:id="@+id/create_date"
@@ -88,7 +97,9 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/subscribers" />
+                        android:text="@string/subscribers"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/secondary_text" />
 
                 <TextView
                         android:id="@+id/subscriber_count"
@@ -105,7 +116,9 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/description" />
+                        android:text="@string/description"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/secondary_text" />
 
                 <TextView
                         android:id="@+id/public_description"
@@ -122,12 +135,17 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/rules"/>
+                        android:text="@string/rules"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/secondary_text" />
 
-                <TextView
-                        android:id="@+id/rules_text"
+                <LinearLayout
+                        android:id="@+id/rules_layout"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:divider="@drawable/spacer_8dp_h"
+                        android:orientation="vertical"
+                        android:showDividers="middle" />
 
             </LinearLayout>
 
