--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -63,13 +63,52 @@
 
                 </LinearLayout>
 
-                <Button
+                <android.support.v4.widget.Space
+                        android:layout_width="match_parent"
+                        android:layout_height="16dp" />
+
+                <RelativeLayout
                         android:id="@+id/subscribe_button"
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_gravity="start"
-                        android:maxWidth="280dp"
-                        tools:text="unsubscribe" />
+                        android:layout_height="64dp"
+                        android:background="@drawable/button_bg"
+                        android:focusable="true">
+
+                    <TextView
+                            android:id="@+id/subscribe_button_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:padding="8dp"
+                            android:textAllCaps="true"
+                            android:textSize="@dimen/button_text_size"
+                            android:textColor="@color/white"
+                            tools:text="@string/subscribed" />
+
+                    <ImageView
+                            android:id="@+id/subscribe_button_icon"
+                            android:layout_width="@dimen/button_icon_size"
+                            android:layout_height="@dimen/button_icon_size"
+                            android:layout_centerVertical="true"
+                            android:layout_toLeftOf="@id/subscribe_button_text"
+                            android:layout_toStartOf="@id/subscribe_button_text"
+                            android:src="@drawable/ic_done_black_24dp"
+                            android:tint="@color/white" />
+
+                    <ProgressBar
+                            android:id="@+id/subscribe_button_progress"
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="@dimen/button_icon_size"
+                            android:layout_height="@dimen/button_icon_size"
+                            android:layout_centerVertical="true"
+                            android:layout_toLeftOf="@id/subscribe_button_text"
+                            android:layout_toStartOf="@id/subscribe_button_text"
+                            android:indeterminateTint="@color/white"
+                            android:indeterminate="true"
+                            android:visibility="gone"
+                            tools:visibility="visible" />
+
+                </RelativeLayout>
 
                 <android.support.v4.widget.Space
                         android:layout_width="match_parent"
