--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,4 +58,6 @@
     <dimen name="unread_message_indicator_size">16dp</dimen>
     <dimen name="subscription_icon_width">48dp</dimen>
     <dimen name="subscription_icon_height">48dp</dimen>
+    <dimen name="button_text_size">20sp</dimen>
+    <dimen name="button_icon_size">24dp</dimen>
 </resources>
