--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
         <item name="android:windowActionModeOverlay">true</item>
         <!-- app background color -->
         <item name="android:windowBackground">@color/primary_light</item>
+
+        <item name="android:buttonStyle">@style/CustomButton</item>
     </style>
 
     <style name="ToolbarThemeLightText" parent="AppTheme">
@@ -52,4 +54,15 @@
         <item name="android:topBright">@color/transparent</item>
         <item name="android:topDark">@color/transparent</item>
     </style>
+
+    <style name="CustomButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_bg</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:height">64dp</item>
+        <item name="android:drawablePadding">8dp</item>
+    </style>
+
 </resources>
