--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <FrameLayout
-                android:id="@+id/fragment_container"
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <android.support.design.widget.AppBarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:elevation="@dimen/toolbar_elevation"
+                    tools:targetApi="lollipop">
+
+                <include layout="@layout/app_toolbar" />
+
+                <include layout="@layout/navigation_tab_layout" />
+
+            </android.support.design.widget.AppBarLayout>
+
+            <FrameLayout
+                    android:id="@+id/fragment_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+        </LinearLayout>
 
         <android.support.design.widget.NavigationView
                 android:id="@+id/navigation_view"
