--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -53,7 +53,7 @@
         <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/primary_dark" />
+                android:background="@color/divider" />
 
         <LinearLayout
                 android:id="@+id/last_message_layout"
