--- a/app/src/main/res/values/strings-app.xml
+++ b/app/src/main/res/values/strings-app.xml
@@ -4,4 +4,6 @@
     <string name="confirm_exit_dialog_title">Exit app?</string>
     <string name="confirm_exit_dialog_confirm">Exit</string>
     <string name="confirm_exit_dialog_cancel">Cancel</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
