--- a/app/src/main/res/menu/comments.xml
+++ b/app/src/main/res/menu/comments.xml
@@ -4,16 +4,22 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:id="@+id/action_refresh"
-            android:title="@string/action_refresh"
-            android:icon="@drawable/ic_refresh_black_24dp"
+            android:id="@+id/action_share"
+            android:icon="@drawable/ic_share_black_24dp"
+            android:title="@string/action_share"
             app:showAsAction="ifRoom" />
 
     <item
+            android:id="@+id/action_refresh"
+            android:icon="@drawable/ic_refresh_black_24dp"
+            android:title="@string/action_refresh"
+            app:showAsAction="never" />
+
+    <item
             android:id="@+id/action_change_sort"
-            android:title="@string/action_sort"
             android:icon="@drawable/ic_sort_black_24dp"
-            app:showAsAction="ifRoom" />
+            android:title="@string/action_sort"
+            app:showAsAction="never" />
 
     <item
             android:id="@+id/action_settings"
