--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -188,6 +188,7 @@
                     android:layout_weight="1">
 
                 <ImageView
+                        android:id="@+id/action_link_upvote_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -204,6 +205,7 @@
                     android:layout_weight="1">
 
                 <ImageView
+                        android:id="@+id/action_link_downvote_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -220,6 +222,7 @@
                     android:layout_weight="1">
 
                 <ImageView
+                        android:id="@+id/action_link_save_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -298,15 +301,16 @@
             <ImageView
                     android:id="@+id/link_saved_view"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="16dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_save_black_24dp"
-                    android:tint="@color/secondary_text" />
+                    android:tint="@color/secondary_text"
+                    android:visibility="gone"/>
 
             <ImageView
                     android:id="@+id/link_stickied_view"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="16dp"
                     android:src="@drawable/ic_class_black_24dp"
                     android:tint="@color/secondary_text" />
 
