--- a/app/src/main/res/layout/fragment_markdown_text.xml
+++ b/app/src/main/res/layout/fragment_markdown_text.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <com.ddiehl.android.htn.view.widgets.MarkdownTextView
+    <com.ddiehl.android.htn.view.MarkdownTextView
             android:id="@+id/markdown_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
