--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -60,4 +60,5 @@
     <dimen name="subscription_icon_height">48dp</dimen>
     <dimen name="button_text_size">20sp</dimen>
     <dimen name="button_icon_size">24dp</dimen>
+    <dimen name="listings_link_icon_size">20dp</dimen>
 </resources>
