--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
         <item name="android:topDark">@color/transparent</item>
     </style>
 
-    <style name="TransparentTheme" parent="@style/Theme.AppCompat">
+    <style name="TransparentTheme" parent="AppTheme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
