WIP - Display success message when reporting listings

--- a/app/src/main/res/values/strings-links.xml
+++ b/app/src/main/res/values/strings-links.xml
@@ -22,5 +22,6 @@
     <string name="report_submit">report</string>
     <string name="report_cancel">cancel</string>
     <string name="report_menu_title">Report</string>
+    <string name="report_successful">report successful</string>
 
 </resources>
