--- a/app/src/main/res/layout/report_dialog_view.xml
+++ b/app/src/main/res/layout/report_dialog_view.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        android:id="@+id/dialog_view_group"
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp">
 
-</LinearLayout>
+    <LinearLayout
+            android:id="@+id/dialog_view_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:showDividers="middle"
+            android:divider="@drawable/spacer_8dp_h"
+            android:orientation="vertical" />
+
+</ScrollView>
