--- a/app/src/main/res/layout/report_dialog_view_choice_item.xml
+++ b/app/src/main/res/layout/report_dialog_view_choice_item.xml
@@ -4,17 +4,25 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
     <RadioButton
             android:id="@+id/report_choice_item_selector"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"/>
 
     <TextView
             android:id="@+id/report_choice_item_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:includeFontPadding="false"
+            android:textColor="@color/primary_text"
+            android:textSize="18sp"
             tools:text="Lorem ipsum" />
 
 </LinearLayout>
