--- a/app/src/main/res/layout/report_dialog_view.xml
+++ b/app/src/main/res/layout/report_dialog_view.xml
@@ -6,7 +6,7 @@
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
 
-    <LinearLayout
+    <RadioGroup
             android:id="@+id/dialog_view_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
