--- a/app/src/main/res/layout/report_dialog_view_edit_item.xml
+++ b/app/src/main/res/layout/report_dialog_view_edit_item.xml
@@ -4,12 +4,16 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:orientation="horizontal">
 
     <RadioButton
             android:id="@+id/report_choice_item_selector"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" />
 
     <EditText
             android:id="@+id/report_choice_edit_text"
