--- a/app/src/main/res/layout/report_dialog_view_edit_item.xml
+++ b/app/src/main/res/layout/report_dialog_view_edit_item.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:hint="@string/report_other_hint"
             tools:text="Lorem ipsum" />
 
 </LinearLayout>
