--- a/app/src/main/res/values/strings-links.xml
+++ b/app/src/main/res/values/strings-links.xml
@@ -20,5 +20,6 @@
     <string name="listings_link_saved_description">saved</string>
     <string name="listings_link_stickied_description">stickied</string>
     <string name="report_successful">report successful</string>
+    <string name="report_error">error submitting report, please try again later</string>
 
 </resources>
